# mur_ide-macos-arm

./: .gitignore  README.md  RUNBOOK.md  settings.ini  start_ide  start_simulator
mur_simulator/: .gitignore  CMakeLists.txt
mur_simulator/cmake/modules/: AdjustPkgConfigForMSVC.cmake  CheckCompilerToolchain.cmake  CheckHost.cmake  CheckUrhoLibrary.cpp  FindDirectFB.cmake  FindDirectRenderingManager.cmake  FindDirectX.cmake  FindEsound.cmake  FindFusionSound.cmake  FindGenericBufferManagement.cmake  FindJack.cmake  FindNetworkAudioSystem.cmake  FindODBC.cmake  FindOSS.cmake  FindPulseAudio.cmake  FindReadline.cmake  FindRoarAudio.cmake  FindSecretRabbitCode.cmake  FindUrho3D.cmake  FindVideoCore.cmake  FindWayland.cmake  FindaRts.cmake  GenerateExportHeader.cmake  GetUrhoRevision.cmake  MacOSXBundleInfo.plist.template  PostProcessForWebModule.cmake  UrhoCommon.cmake  exportheader.cmake.in  iOSBundleInfo.plist.template  tvOSBundleInfo.plist.template  windeployqt.cmake
mur_simulator/cmake/toolchains/: Arm.cmake  Emscripten.cmake  MinGW.cmake  RaspberryPi.cmake
mur_simulator/resources/: simulator.pck
mur_simulator/resources/Data/Animation/: CloseGrabber.ani  OpenGrabber.ani
mur_simulator/resources/Data/Materials/AUV/: Acril.xml  Blades.xml  Buoyancy.xml  Frame.xml  GrabberAUV.txt  Killswitch.xml  MAUV.txt  Thruster.txt
mur_simulator/resources/Data/Materials/Environment/: Skybox_PartlyCloudy.xml  WaterTop.xml
mur_simulator/resources/Data/Materials/Objects/: Flare.xml  Generic.xml
mur_simulator/resources/Data/Materials/Particles/: SoftParticle.xml
mur_simulator/resources/Data/Materials/Pool/: TilesBright.xml  TilesDark.xml
mur_simulator/resources/Data/Models/AUV/: Grabber.mdl  MAUV.mdl  (+1 more)
mur_simulator/resources/Data/Particles/: UnderwaterBubbles.xml  UnderwaterGeneric.xml
mur_simulator/resources/Data/RenderPaths/: MurSimulator_Camera.xml  MurSimulator_Editor.xml  MurSimulator_Main.xml
mur_simulator/resources/Data/Techniques/: PBR_PoolObject_FollowUV.xml  PBR_PoolObject_NoTexture.xml  PBR_PoolObject_Textured.xml  PBR_PoolTiles.xml
mur_simulator/sources/: Application.cpp  Application.h  Main.cpp
mur_simulator/sources/Core/: QUrhoHelpers.cpp  QUrhoHelpers.h  QUrhoInput.cpp  QUrhoInput.h  QUrhoScene.cpp  QUrhoScene.h  QUrhoWidget.cpp  QUrhoWidget.h  SceneManager.cpp  SceneManager.h
mur_simulator/sources/Overlay/: AUVOverlay.cpp  AUVOverlay.h  HydrophonesOverlay.cpp  HydrophonesOverlay.h  LuaOverlay.cpp  LuaOverlay.h  QSceneOverlay.cpp  QSceneOverlay.h  ScriptsOverlay.cpp  ScriptsOverlay.h  SharingOverlay.cpp  SharingOverlay.h  ViewportOverlay.cpp  ViewportOverlay.h
mur_simulator/sources/ProcessingVideo/: ProcessingVideo.cpp  ProcessingVideo.h
mur_simulator/sources/ScriptHandler/: ScriptHandler.cpp  ScriptHandler.h
mur_simulator/sources/Ui/: ApplicationWindowBase.cpp  ApplicationWindowBase.h  ApplicationWindowDesktop.cpp  ApplicationWindowDesktop.h  ApplicationWindowWeb.cpp  ApplicationWindowWeb.h  GraphicsSettingsWidget.cpp  GraphicsSettingsWidget.h  QAUVSettingsWidgetBase.h  QAUVSettingsWidgetDesktop.cpp  QAUVSettingsWidgetDesktop.h  QAUVSettingsWidgetWeb.cpp  QAUVSettingsWidgetWeb.h  ValueSlider.cpp  ValueSlider.h
(+76 files in other folders)
